# fileserver-rs

./: .gitignore  README.md  dev.sh  prod.sh
backend/: Cargo.toml
backend/src/: main.rs
common/: Cargo.toml
common/src/: lib.rs
frontend/: Cargo.toml  index.html
frontend/src/: main.rs
