[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.5", features = ["multipart"] }
axum-extra = { version = "0.3", features = ["spa"] }
clap = { version = "4.0.11", features = ["derive"] }
log = "0.4.17"
tokio = { version = "1.21.2", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.3.4", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
path-dedot = "3.0"
mime_guess = "2.0"
walkdir = "2"
chrono = "0.4"
tokio-util = "0.7"
futures = "0.3"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
common = { path = "../common" }
