[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1.7"
gloo-net = "0.2.4"
log = "0.4.17"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.33"
serde-wasm-bindgen = "0.4"
wasm-logger = "0.2.0"
yew = "0.19.3"
yew-router = "0.16.0"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
common = { path = "../common" }
dioxus-router = "0.2"
dioxus = { version = "0.2", features = ["web", "default"] }
reqwest = { version = "0.11", features = ["json"] }
